--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,4 +19,15 @@ jobs:
       # - image: redis:2.8.19
 
     steps:
-      - run: exit 0
+      - checkout
+      - run:
+          name: "Install WP CLI"
+          command: |
+            curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+            php wp-cli.phar core install \
+            --url=$WP_TEST_URL \
+            --title='Test' \
+            --admin_user=$WP_TEST_USER \
+            --admin_password=$WP_TEST_USER_PASS \
+            --admin_email="$WP_TEST_USER@wordpress.dev" \
+            --path=htdocs/wordpress
