--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,6 @@ jobs:
       - run:
           name: "Composer install"
           command: composer install
+      -run:
+        name: "Install WordPress"
+        command: bash config/setup.sh
