--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     docker:
       # Specify the version you desire here
       - image: circleci/php:7.3-node-browsers
+      - image: circleci/mariadb:10.3-ram
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
