--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,16 +17,16 @@ jobs:
 
     steps:
       - checkout
-#      - run:
-#        name: Waiting for MySQL to be ready
-#        command: |
-#          for i in `seq 1 10`;
-#          do
-#            nc -z 127.0.0.1 3306 && echo Success && exit 0
-#            echo -n .
-#            sleep 1
-#          done
-#          echo Failed waiting for MySQL && exit 1
+      - run:
+          name: Waiting for MySQL to be ready
+          command: |
+            for i in `seq 1 10`;
+            do
+              nc -z 127.0.0.1 3306 && echo Success && exit 0
+              echo -n .
+              sleep 1
+            done
+            echo Failed waiting for MySQL && exit 1
 #      - run:
 #        name: Install MySQL CLI; Import dummy data; run an example query
 #        command: |
