update a basic wp setup script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,3 +41,5 @@ jobs:
       - run:
           name: Install WordPress
           command: bash config/setup.sh
+      - run:
+          name: Test WP Content
