--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,4 +42,4 @@ jobs:
           command: composer update
       - run:
           name: Install WordPress
-          command: bash config/setup.sh
+          command: cd wordpress && bash ../config/setup.sh
