--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@ jobs:
       - run:
           name: Install MySQL CLI
           command: |
-            sudo apt-get install mysql-client gd sockets mysqli exif
+            sudo apt-get update
+            sudo apt-get install default-mysql-client gd sockets exif
       - run:
           name: Install WP CLI
           command: |
