--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Install MySQL CLI
           command: |
             sudo apt-get update
-            sudo apt-get install default-mysql-client gd sockets exif
+            sudo apt-get install default-mysql-client php-gd php-sockets php-exif
       - run:
           name: Install WP CLI
           command: |
