--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           name: Install MySQL CLI
           command: |
             sudo apt-get update
-            sudo apt-get install mysql-client php-mysqli
+            sudo apt-get install default-mysql-client default-mysqli
       - run:
           name: Install WP CLI
           command: |
